refactor: extract CommandFactory and Command